--- a/index.html
+++ b/index.html
@@ -464,7 +464,16 @@
         }
       }
     </style>
-  </head>
+  </<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16673241207">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16673241207');
+</script>>
   <body>
     <div class="container-banner" id="mobiriseBanner">
       <div class="banner align-center">
